Updated Outdated URLs
Signed-off-by: ansijain <ansi.jain@india.nec.com>

--- a/v0.36.1/definitions.html
+++ b/v0.36.1/definitions.html
@@ -11881,7 +11881,7 @@ The sign will be omitted unless the number is negative.</p>
 <em>optional</em></p>
 </div></div></td>
 <td class="tableblock halign-left valign-middle"><div><div class="paragraph">
-<p>ContainerDisk references a docker image, embedding a qcow or raw disk. More info: <a href="https://kubevirt.gitbooks.io/user-guide/registry-disk.html" class="bare">https://kubevirt.gitbooks.io/user-guide/registry-disk.html</a></p>
+<p>ContainerDisk references a docker image, embedding a qcow or raw disk. More info: <a href="http://kubevirt.io/user-guide/virtual_machines/disks_and_volumes/#containerdisk" class="bare">http://kubevirt.io/user-guide/virtual_machines/disks_and_volumes/#containerdisk</a></p>
 </div></div></td>
 <td class="tableblock halign-left valign-middle"><div><div class="paragraph">
 <p><a href="#_v1_containerdisksource">v1.ContainerDiskSource</a></p>
@@ -11917,7 +11917,7 @@ The sign will be omitted unless the number is negative.</p>
 <em>optional</em></p>
 </div></div></td>
 <td class="tableblock halign-left valign-middle"><div><div class="paragraph">
-<p>EmptyDisk represents a temporary disk which shares the vmis lifecycle. More info: <a href="https://kubevirt.gitbooks.io/user-guide/disks-and-volumes.html" class="bare">https://kubevirt.gitbooks.io/user-guide/disks-and-volumes.html</a></p>
+<p>EmptyDisk represents a temporary disk which shares the vmis lifecycle. More info: <a href="http://kubevirt.io/user-guide/virtual_machines/disks_and_volumes/#emptydisk" class="bare">http://kubevirt.io/user-guide/virtual_machines/disks_and_volumes/#emptydisk</a></p>
 </div></div></td>
 <td class="tableblock halign-left valign-middle"><div><div class="paragraph">
 <p><a href="#_v1_emptydisksource">v1.EmptyDiskSource</a></p>
