--- a/v0.6.1/definitions.html
+++ b/v0.6.1/definitions.html
@@ -4064,7 +4064,7 @@ More info: <a href="http://cloudinit.readthedocs.io/en/latest/topics/datasources
 <td class="tableblock halign-left valign-middle"><p class="tableblock"><strong>emptyDisk</strong><br>
 <em>optional</em></p></td>
 <td class="tableblock halign-left valign-middle"><p class="tableblock">EmptyDisk represents a temporary disk which shares the vmis lifecycle
-More info: <a href="https://kubevirt.gitbooks.io/user-guide/disks-and-volumes.html" class="bare">https://kubevirt.gitbooks.io/user-guide/disks-and-volumes.html</a>
+More info: <a href="http://kubevirt.io/user-guide/virtual_machines/disks_and_volumes/#emptydisk" class="bare">http://kubevirt.io/user-guide/virtual_machines/disks_and_volumes/#emptydisk</a>
 +optional</p></td>
 <td class="tableblock halign-left valign-middle"><p class="tableblock"><a href="#_v1_emptydisksource">v1.EmptyDiskSource</a></p></td>
 </tr>
@@ -4096,7 +4096,7 @@ More info: <a href="https://kubernetes.io/docs/concepts/storage/persistent-volum
 <td class="tableblock halign-left valign-middle"><p class="tableblock"><strong>registryDisk</strong><br>
 <em>optional</em></p></td>
 <td class="tableblock halign-left valign-middle"><p class="tableblock">RegistryDisk references a docker image, embedding a qcow or raw disk
-More info: <a href="https://kubevirt.gitbooks.io/user-guide/registry-disk.html" class="bare">https://kubevirt.gitbooks.io/user-guide/registry-disk.html</a>
+More info: <a href="http://kubevirt.io/user-guide/virtual_machines/disks_and_volumes/#containerdisk" class="bare">http://kubevirt.io/user-guide/virtual_machines/disks_and_volumes/#containerdisk</a>
 +optional</p></td>
 <td class="tableblock halign-left valign-middle"><p class="tableblock"><a href="#_v1_registrydisksource">v1.RegistryDiskSource</a></p></td>
 </tr>
