--- a/v0.3.0/definitions.html
+++ b/v0.3.0/definitions.html
@@ -3483,7 +3483,7 @@ More info: <a href="https://kubernetes.io/docs/concepts/storage/persistent-volum
 <td class="tableblock halign-left valign-middle"><p class="tableblock"><strong>registryDisk</strong><br>
 <em>optional</em></p></td>
 <td class="tableblock halign-left valign-middle"><p class="tableblock">RegistryDisk references a docker image, embedding a qcow or raw disk
-More info: <a href="https://kubevirt.gitbooks.io/user-guide/registry-disk.html" class="bare">https://kubevirt.gitbooks.io/user-guide/registry-disk.html</a>
+More info: <a href="http://kubevirt.io/user-guide/virtual_machines/disks_and_volumes/#containerdisk" class="bare">http://kubevirt.io/user-guide/virtual_machines/disks_and_volumes/#containerdisk</a>
 +optional</p></td>
 <td class="tableblock halign-left valign-middle"><p class="tableblock"><a href="#_v1_registrydisksource">v1.RegistryDiskSource</a></p></td>
 </tr>
