--- a/v0.31.0/definitions.html
+++ b/v0.31.0/definitions.html
@@ -6486,7 +6486,7 @@ The sign will be omitted unless the number is negative.</p>
 <tr>
 <td class="tableblock halign-left valign-middle"><p class="tableblock"><strong>containerDisk</strong><br>
 <em>optional</em></p></td>
-<td class="tableblock halign-left valign-middle"><p class="tableblock">ContainerDisk references a docker image, embedding a qcow or raw disk. More info: <a href="https://kubevirt.gitbooks.io/user-guide/registry-disk.html" class="bare">https://kubevirt.gitbooks.io/user-guide/registry-disk.html</a></p></td>
+<td class="tableblock halign-left valign-middle"><p class="tableblock">ContainerDisk references a docker image, embedding a qcow or raw disk. More info: <a href="http://kubevirt.io/user-guide/virtual_machines/disks_and_volumes/#containerdisk" class="bare">http://kubevirt.io/user-guide/virtual_machines/disks_and_volumes/#containerdisk</a></p></td>
 <td class="tableblock halign-left valign-middle"><p class="tableblock"><a href="#_v1_containerdisksource">v1.ContainerDiskSource</a></p></td>
 </tr>
 <tr>
@@ -6498,7 +6498,7 @@ The sign will be omitted unless the number is negative.</p>
 <tr>
 <td class="tableblock halign-left valign-middle"><p class="tableblock"><strong>emptyDisk</strong><br>
 <em>optional</em></p></td>
-<td class="tableblock halign-left valign-middle"><p class="tableblock">EmptyDisk represents a temporary disk which shares the vmis lifecycle. More info: <a href="https://kubevirt.gitbooks.io/user-guide/disks-and-volumes.html" class="bare">https://kubevirt.gitbooks.io/user-guide/disks-and-volumes.html</a></p></td>
+<td class="tableblock halign-left valign-middle"><p class="tableblock">EmptyDisk represents a temporary disk which shares the vmis lifecycle. More info: <a href="http://kubevirt.io/user-guide/virtual_machines/disks_and_volumes/#emptydisk" class="bare">http://kubevirt.io/user-guide/virtual_machines/disks_and_volumes/#emptydisk</a></p></td>
 <td class="tableblock halign-left valign-middle"><p class="tableblock"><a href="#_v1_emptydisksource">v1.EmptyDiskSource</a></p></td>
 </tr>
 <tr>
