--- a/v0.26.0/definitions.html
+++ b/v0.26.0/definitions.html
@@ -6086,7 +6086,7 @@ More info: <a href="https://kubernetes.io/docs/tasks/configure-pod-container/con
 <td class="tableblock halign-left valign-middle"><p class="tableblock"><strong>containerDisk</strong><br>
 <em>optional</em></p></td>
 <td class="tableblock halign-left valign-middle"><p class="tableblock">ContainerDisk references a docker image, embedding a qcow or raw disk.
-More info: <a href="http://kubevirt.io/user-guide/virtual_machines/disks_and_volumes/#containerdisk" class="bare">http://kubevirt.io/user-guide/virtual_machines/disks_and_volumes/#containerdisk</a>
+More info: <a href="https://kubevirt.io/user-guide/virtual_machines/disks_and_volumes/#containerdisk" class="bare">https://kubevirt.io/user-guide/virtual_machines/disks_and_volumes/#containerdisk</a>
 +optional</p></td>
 <td class="tableblock halign-left valign-middle"><p class="tableblock"><a href="#_v1_containerdisksource">v1.ContainerDiskSource</a></p></td>
 </tr>
@@ -6102,7 +6102,7 @@ the process of populating that PVC with a disk image.
 <td class="tableblock halign-left valign-middle"><p class="tableblock"><strong>emptyDisk</strong><br>
 <em>optional</em></p></td>
 <td class="tableblock halign-left valign-middle"><p class="tableblock">EmptyDisk represents a temporary disk which shares the vmis lifecycle.
-More info: <a href="http://kubevirt.io/user-guide/virtual_machines/disks_and_volumes/#emptydisk" class="bare">http://kubevirt.io/user-guide/virtual_machines/disks_and_volumes/#emptydisk</a>
+More info: <a href="https://kubevirt.io/user-guide/virtual_machines/disks_and_volumes/#emptydisk" class="bare">https://kubevirt.io/user-guide/virtual_machines/disks_and_volumes/#emptydisk</a>
 +optional</p></td>
 <td class="tableblock halign-left valign-middle"><p class="tableblock"><a href="#_v1_emptydisksource">v1.EmptyDiskSource</a></p></td>
 </tr>
